@@ -6,12 +6,7 @@ BUILT_SOURCES = \
 	vex_parse.tab.h \
 	vex_parse.c 
 
-library_includedir = $(includedir)
-library_include_HEADERS = \
-	vex_parse.h \
-	vex.h 
-
-lib_LTLIBRARIES = \
+noinst_LTLIBRARIES = \
 	libvex.la
 
 vex_parse.tab.h: $(srcdir)/vex_parse.y
@@ -26,10 +21,9 @@ libvex_la_SOURCES = \
 	vex_get.c \
 	vex_put.c \
 	vex_util.c \
+	vex_parse.h \
 	vex_parse.y \
+	vex.h \
 	vex.yy.l
-
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = vex.pc
 
 CLEANFILES = vex_parse.tab.[ch] vex_parse.[ch] vex.yy.c
